Explicit instruction in README and headers on views

--- a/views/uploaded_files.erb
+++ b/views/uploaded_files.erb
@@ -1,3 +1,5 @@
+<h1>Successfully uploaded files:</h1>
+
 <% @files.each do |file| %>
   <p>Path: <%= file.path %></p>
   <p>Filetype: <%= File.extname(file.path) %></p>
