--- a/views/upload.erb
+++ b/views/upload.erb
@@ -1,3 +1,5 @@
+<h1>Select a zipfile (or not) to upload</h1>
+
 <form action="upload" method="POST" enctype="multipart/form-data">
   <input type="file" name="file">
   <input type="submit" value="Upload!">
