Integrated Flash notices

--- a/views/upload.erb
+++ b/views/upload.erb
@@ -1,3 +1,5 @@
+<%= flash[:notice] %>
+
 <h1>Select a zipfile (or not) to upload</h1>
 
 <form action="upload" method="POST" enctype="multipart/form-data">
