--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,9 @@
 <h1>Welcome to Sinatra-Unzipper</h1>
 
+<%= form_tag "/uploads", method: "POST" do
+  text_field_tag :movie_title
+  submit_tag 'Upload!'
+end %>
+
 <a href="/upload">Upload a file!</a>
+
